# Slate

./: LICENSE  README.md  pyproject.toml
examples/: mouse_playground.py
experiments/: color_info.py  graveyard.py  markup.py  mouse.py  resize.py  screen.py  screen_resize.py
gunmetal/: core.py  screen.py  span.py  terminal.py
slate/: __about__.py  __init__.py  __main__.py  color.py  color_info.py  core.py  event.py  key_names.py  screen.py  span.py  terminal.py
tests/: test_color.py  test_core.py  test_event.py  test_screen.py  test_span.py  test_terminal.py
undertone/: __about__.py  __init__.py  core.py  event.py  key_names.py  screen.py  span.py  terminal.py
