[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "undertone"
description = "A lightweight set of tools for interfacing with the terminal."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "bczsalba", email = "bczsalba@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/undertone#readme"
Issues = "https://github.com/unknown/undertone/issues"
Source = "https://github.com/unknown/undertone"

[tool.hatch.version]
path = "undertone/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=undertone --cov=tests && coverage html"
lint = "pylint undertone"
type = "mypy undertone"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "undertone/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no-cov",
  "if os.name == \"nt\"",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true

[tool.pylint]
fail-under = 9.9
disable = "fixme"
good-names = ["i", "j", "k", "ex", "Run", "_", "x" ,"y", "fd"]

[tool.isort]
profile = "black"

