[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "sh40-slate"
description = "A powerful terminal management library."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "bczsalba", email = "bczsalba@gmail.com" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries",
  "Topic :: Terminals",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/shade40/slate#readme"
Issues = "https://github.com/shade40/slate/issues"
Source = "https://github.com/shade40/slate"

[tool.hatch.version]
path = "slate/__about__.py"

[tool.hatch.build]
include = [
  "slate/*.py",
  "slate/py.typed",
  "/tests",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=slate --cov=tests && coverage html"
lint = "pylint slate"
type = "mypy slate"
upload = "hatch build && twine upload dist/* && hatch clean"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "slate/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no-cov",
  "def __repr__",
  "if os.name == \"nt\"",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true

[tool.pylint]
fail-under = 9.9
disable = "fixme, missing-module-docstring"
good-names = ["i", "j", "k", "ex", "Run", "_", "x" ,"y", "fd"]

[tool.isort]
profile = "black"

